objects/CaseGuidanceStep__c.object
<CustomObject>
    <description>To store specific steps within a case guidance template, providing detailed instructions and structure for client case management processes.</description>
    <fields>
        <fullName>CaseGuidanceTemplate__c</fullName>
        <label>Case Guidance Template</label>
        <referenceTo>CaseGuidanceTemplate__c</referenceTo>
        <relationshipLabel>Case Guidance Step</relationshipLabel>
        <relationshipName>Case_Guidance_Step</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StepDetails__c</fullName>
        <label>Step Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StepName__c</fullName>
        <label>Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Guidance Step</label>
    <nameField>
        <label>Case Guidance Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Guidance Step</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>